--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "install": "^0.12.2",
     "moment": "^2.24.0",
     "npm": "^6.9.0",
+    "nprogress": "^0.2.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
