--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "ant-design-vue": "^1.3.10",
+    "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "echarts": "^4.2.1",
     "install": "^0.12.2",
+    "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "npm": "^6.9.0",
     "nprogress": "^0.2.0",
+    "resize-detector": "^0.2.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
